test/compile_errors/err_labeled_continue_to_block.w
//! expect-check-fail: cannot continue a labeled block; only loops support continue

fn main:
    'block:
        continue 'block
